DEVX-10532 - Verify v1 supports only Basic header auth